parser/tests/parser/complex/invalid/declaration_recovery_2.mf2
.foo $var
.local $hello = {world}
{{}}
=== spans ===
                    .foo $var↵.local $hello = {world}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LocalDeclaration              ^^^^^^^^^^^^^^^^^^^^^^^
Variable                             ^^^^^^
LiteralExpression                             ^^^^^^^
Text                                           ^^^^^
QuotedPattern                                         ^^^^
Pattern             
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..9)
  .foo $var↵.local $hello = {world}↵{{}}
  ^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..38,
    declarations: [
        LocalDeclaration {
            start: @10,
            variable: Variable {
                span: @17..23,
                name: "hello",
            },
            expression: LiteralExpression {
                span: @26..33,
                literal: Text {
                    start: @27,
                    content: "world",
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    body: QuotedPattern {
        span: @34..38,
        pattern: Pattern {
            parts: [],
        },
    },
}